Dropdown menu z-index issue fix.

--- a/scp/css/scp.css
+++ b/scp/css/scp.css
@@ -327,7 +327,6 @@ a time.relative {
     display: inline-block;
     border-top-right-radius: 6px;
     border-top-left-radius: 6px;
-    z-index:10;
     margin:0 2px;
 }
 
@@ -438,7 +437,7 @@ a time.relative {
     left:-1px;
     top:32px;
     position:absolute;
-    z-index:-10;
+    z-index:10;
 }
 
 .customQ-dropdown ul.scroll-height {
@@ -717,7 +716,7 @@ a time.relative {
     left: auto;
     display: none;
     position: absolute;
-    z-index: 20;
+    z-index: 9;
     padding:0;
     margin:0;
 }
@@ -784,7 +783,7 @@ a time.relative {
     left:-247px;
     top:-1px;
     position:absolute;
-    z-index:-10;
+    z-index:10;
 }
 .jb-overflowmenu-menu-secondary .customQ-dropdown ul li > div.editQ {
     margin-top:2px;
